--- a/_sass/var.scss
+++ b/_sass/var.scss
@@ -7,4 +7,4 @@ $base-color: #141414;
 
 // We can also use this area to import some basic elemets like fonts
 // Font Imports
-@import url('https://fonts.googleapis.com/css?family=Cabin|Roboto:300&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
